--- a/task3/css/style.css
+++ b/task3/css/style.css
@@ -60,8 +60,9 @@ header nav a:hover, header nav a:active {
 }
 
 main {
+ width: 1000px;
  margin-top: 40px;
- position: absolute;
+ display: inline-block;
 }
 
 .left_menu {
@@ -127,13 +128,14 @@ main {
 }
 
 footer {
- position: absolute;
  width: 966px;
- bottom: 30px;
+ display: inline-block;
  background-color: #e1e1e1;
  font-size: 10pt;
  line-height: 40px;
  list-style-type: none;
+ margin-top: 50px;
+ margin-bottom: 20px;
 }
 
 footer nav {
