--- a/task4/css/style.css
+++ b/task4/css/style.css
@@ -66,10 +66,14 @@ header {
  margin-bottom: 30px;
 }
 
-.contacts p {
+.contacts p, .contacts a, .contacts a:hover {
  margin-bottom: 5px;
  font-size: 12pt;
  color: #5fa5bb;
+}
+
+.contacts a, .contacts a:hover {
+ text-decoration: none;
 }
 
 .clear {
@@ -84,9 +88,9 @@ header {
 
 .country li{
  display: inline-block;
- width: 42px;
+ width: 75px;
  height: 42px;
- margin-left: 20px;
+ text-align: center;
  padding-top: 45px;
  background-position: top center;
 }
@@ -115,14 +119,10 @@ header {
 
 .slanka {
  background: url("../img/s.png") no-repeat;
- width: 80px!important;
- margin-left: 10px!important;
 }
 
 .maldivi {
  background: url("../img/m.png") no-repeat;
- width: 63px!important;
- margin-left: 10px!important;
 }
 
 .slider {
@@ -141,6 +141,8 @@ nav {
  margin-top: -2px;
  border-bottom: 1px #000 solid;
  background-color: #333333;
+ position: relative;
+ z-index: 1;
  -webkit-box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.75);
  -moz-box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.75);
  box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.75);
@@ -160,11 +162,15 @@ nav ul li {
  height: 28px;
  color: #ffffff;
  margin-right: 30px;
- cursor: pointer;
  position: relative;
- z-index: 1;
+ z-index: 2;
  padding: 0 10px;
  line-height: 28px;
+}
+
+nav ul li a, nav ul li a:hover{
+ color: #ffffff;
+ text-decoration: none;
 }
 
 nav ul li ul {
@@ -297,4 +303,9 @@ main p {
 .copy span {
  display: inline-block;
  margin-top: 30px;
+}
+
+.copy a, .copy a:hover {
+ text-decoration: none;
+ color: #fff;
 }
