--- a/task5/css/style.css
+++ b/task5/css/style.css
@@ -259,3 +259,10 @@ form input[type="submit"] {
  color: #fff;
  padding-bottom: 30px;
 }
+
+.all_containers {
+ width: 100%;
+ height: 890px;
+ margin: 0 auto;
+ position: relative;
+}
